[package]
name = "hw4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

async-channel = "1.9.0"
scoped-tls = "1.0.1"
async-std = "1.12.0"
thread-id = "3.0.0"
lazy_static = "1.4"
futures = "0.3.28"
rand = "0.8.5"

